# INF329A-Vector

./: CMakeLists.txt  VListSU(1).hpp  list.h  main.cpp  readme.md  unityped.h
basic/: basic_operators.cpp  basic_operators.h
folds/: folds.h
searching/: search.h
special/: special.h
sublist/: sublist.h
transformations/: transformations.h
zipping/: zip.h
